<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bsc_btn"
            android:id="@+id/btn_BuscarProd"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/btn_EliminarProd"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_btn"
            android:id="@+id/btn_EliminarProd"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pub_btn"
            android:id="@+id/btn_Publicar"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/btn_BuscarProd"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regi_btn"
            android:id="@+id/btn_Registrarse"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/btn_Publicar"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo2"
            android:id="@+id/imageView2"
            android:layout_marginTop="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</RelativeLayout>