<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_valida"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ValidaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingre_rut"
        android:id="@+id/rutValida"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rut"
        android:layout_below="@+id/rutValida"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingre_clave"
        android:id="@+id/textView9"
        android:layout_below="@+id/rut"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clave"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publ"
        android:id="@+id/button2"
        android:layout_below="@+id/clave"
        android:layout_marginTop="48dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
