<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrarActivity"
    android:background="@drawable/fondo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingre_rut"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rut"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <TextView
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingre_nom"
                android:id="@+id/textView2"
                android:layout_below="@+id/rut"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <TextView
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingre_ape"
                android:id="@+id/textView3"
                android:layout_below="@+id/nombre"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/apellido"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <TextView
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingre_email"
                android:id="@+id/textView4"
                android:layout_below="@+id/apellido"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <TextView
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingre_fono"
                android:id="@+id/textView5"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fono"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />


            <TextView
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingre_clave"
                android:id="@+id/textView6"
                android:layout_below="@+id/fono"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/clave"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:textSize="20dp" />

            <EditText
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/clave"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:id="@+id/btn_EnviarDatos"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:nestedScrollingEnabled="false"
                android:drawableEnd="@drawable/content_save_all"
                android:background="@android:color/holo_green_light"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
